--- a/src/components/spreadsheet-container/SpreadsheetContainer.css
+++ b/src/components/spreadsheet-container/SpreadsheetContainer.css
@@ -1,9 +1,13 @@
 .spreadSheetContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
   border: 1px solid red;
   width: 80vw;
-  max-height: 50vh;
-  min-height: 10vh;
+  max-height: 80vh;
+  min-height: 50vh;
+}
+
+.column-axis {
+  background-color: rgb(102, 102, 102);
+  width: 100%;
+  height: 2rem;
 }
