fixed some obvious responsivness bugs, added the links to my socials, add reminders that the site is under construction

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,18 @@
 #app {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  /* align-items: center; */
   flex-direction: column;
   height: 100vh;
+}
+
+.header,
+.footer {
+  color: var(--light-font-clr);
+  font-size: 0.8rem;
+}
+
+.content-container {
+  display: flex;
+  justify-content: center;
 }
