--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap");
 
 /* <resetting default styling> */
-* {
+*,
+::before,
+::after {
   box-sizing: border-box;
 }
 
